# SPDX-FileCopyrightText: mpvQC developers
#
# SPDX-License-Identifier: MIT

[project]
name = "mpvQC"
version = "0.9.0-beta5"
description = "libmpv based application for quality control of videos"
readme = "README.md"
requires-python = "~=3.13.0"
classifiers = [
    "Development Status :: 4 - Beta",                                              # 4 - Beta, 5 - Production/Stable
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Jinja2>=3.1.6",
    "PySide6-Essentials==6.11.1",
    "inject>=5.4.1",
    "mpv>=1.0.8",
]

[project.urls]
Homepage = "https://mpvqc.github.io"
Issues = "https://github.com/mpvqc/mpvQC/issues"
Repository = "https://github.com/mpvqc/mpvQC"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "materialyoucolor>=3.0.2",
    "prek>=0.4.5",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-jsonschema>=4.26.0.20260518",
]

[tool.pyside6-project]
files = [
    # WARNING! This list is auto updated by the just build helper
    "data/build-info.toml",
    "data/config/export-template.jinja",
    "data/config/input.conf",
    "data/config/mpv-linux.conf",
    "data/config/mpv-windows.conf",
    "data/fonts/NotoSans-Bold.ttf",
    "data/fonts/NotoSans-Italic.ttf",
    "data/fonts/NotoSans-Regular.ttf",
    "data/fonts/NotoSans-SemiBold.ttf",
    "data/fonts/NotoSansHebrew-Bold.ttf",
    "data/fonts/NotoSansHebrew-Regular.ttf",
    "data/fonts/NotoSansHebrew-SemiBold.ttf",
    "data/fonts/NotoSansMono-Regular.ttf",
    "data/icon.svg",
    "data/icons/add_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/arrow_drop_down_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/aspect_ratio_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/check_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/circle_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/circle_24dp_1F1F1F_FILL1_wght400_GRAD0_opsz24.svg",
    "data/icons/close_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/close_fullscreen_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/code_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/comment_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/content_copy_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/delete_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/deployed_code_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/description_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/download_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/draft_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/edit_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/error_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/exit_to_app_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/file_export_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/file_open_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/first_page_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/folder_open_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/group_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/info_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_down_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_left_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_right_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_arrow_up_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_backspace_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_double_arrow_right_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/keyboard_return_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/language_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/last_page_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/minimize_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/movie_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/movie_edit_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/music_note_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/notes_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/open_in_full_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/open_in_new_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/palette_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/play_arrow_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/radio_button_checked_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/radio_button_unchecked_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/save_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/save_as_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/search_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/select_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/select_check_box_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/settings_backup_restore_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/space_bar_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/subtitles_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/title_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/tooltip_2_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/update_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/upload_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/vertical_split_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/themes.json",
    "i18n/de-DE.ts",
    "i18n/en-US.ts",
    "i18n/es-MX-qt-overrides.ts",
    "i18n/es-MX.ts",
    "i18n/he-IL.ts",
    "i18n/it-IT.ts",
    "i18n/pt-PT.ts",
    "main.py",
    "mpvqc/__init__.py",
    "mpvqc/application.py",
    "mpvqc/build.py",
    "mpvqc/close_event_filter.py",
    "mpvqc/datamodels.py",
    "mpvqc/dialogs/__init__.py",
    "mpvqc/dialogs/about.py",
    "mpvqc/dialogs/appearance.py",
    "mpvqc/dialogs/backup.py",
    "mpvqc/dialogs/comment_types.py",
    "mpvqc/dialogs/dialog_loader.py",
    "mpvqc/dialogs/edit_input.py",
    "mpvqc/dialogs/edit_mpv.py",
    "mpvqc/dialogs/export_settings.py",
    "mpvqc/dialogs/import_settings.py",
    "mpvqc/dialogs/import_wizard/__init__.py",
    "mpvqc/dialogs/import_wizard/dialog_policy.py",
    "mpvqc/dialogs/import_wizard/steps/__init__.py",
    "mpvqc/dialogs/import_wizard/steps/errors.py",
    "mpvqc/dialogs/import_wizard/steps/session.py",
    "mpvqc/dialogs/import_wizard/steps/subtitles.py",
    "mpvqc/dialogs/import_wizard/steps/video.py",
    "mpvqc/dialogs/import_wizard/wizard_helpers.py",
    "mpvqc/dialogs/import_wizard/wizard_viewmodel.py",
    "mpvqc/enums/__init__.py",
    "mpvqc/enums/import_found_video.py",
    "mpvqc/enums/import_wizard_session_mode.py",
    "mpvqc/enums/import_wizard_step_kind.py",
    "mpvqc/enums/time_format.py",
    "mpvqc/enums/window_title_format.py",
    "mpvqc/injections.py",
    "mpvqc/jobs.py",
    "mpvqc/logging_utils.py",
    "mpvqc/models/__init__.py",
    "mpvqc/models/dependencies.py",
    "mpvqc/models/export_templates.py",
    "mpvqc/models/import_options.py",
    "mpvqc/models/languages.py",
    "mpvqc/models/primary_colors.py",
    "mpvqc/models/shortcuts.py",
    "mpvqc/models/theme_preview.py",
    "mpvqc/services/__init__.py",
    "mpvqc/services/application_paths.py",
    "mpvqc/services/build_info.py",
    "mpvqc/services/comment_type_validator.py",
    "mpvqc/services/comments/__init__.py",
    "mpvqc/services/comments/commands.py",
    "mpvqc/services/comments/history.py",
    "mpvqc/services/comments/roles.py",
    "mpvqc/services/comments/search.py",
    "mpvqc/services/comments/selection.py",
    "mpvqc/services/comments/service.py",
    "mpvqc/services/comments/store.py",
    "mpvqc/services/comments/view_action.py",
    "mpvqc/services/desktop.py",
    "mpvqc/services/exporter/__init__.py",
    "mpvqc/services/exporter/backup.py",
    "mpvqc/services/exporter/context.py",
    "mpvqc/services/exporter/documents/__init__.py",
    "mpvqc/services/exporter/documents/classic.py",
    "mpvqc/services/exporter/documents/v1.py",
    "mpvqc/services/exporter/service.py",
    "mpvqc/services/exporter/writer.py",
    "mpvqc/services/file_startup.py",
    "mpvqc/services/font_loader.py",
    "mpvqc/services/formatter_time.py",
    "mpvqc/services/i18n.py",
    "mpvqc/services/importer/__init__.py",
    "mpvqc/services/importer/concerns/__init__.py",
    "mpvqc/services/importer/concerns/errors.py",
    "mpvqc/services/importer/concerns/session.py",
    "mpvqc/services/importer/concerns/subtitles.py",
    "mpvqc/services/importer/concerns/video.py",
    "mpvqc/services/importer/documents/__init__.py",
    "mpvqc/services/importer/documents/classic.py",
    "mpvqc/services/importer/documents/v1.py",
    "mpvqc/services/importer/parsed.py",
    "mpvqc/services/importer/plan.py",
    "mpvqc/services/importer/reader.py",
    "mpvqc/services/importer/scanner.py",
    "mpvqc/services/importer/service.py",
    "mpvqc/services/importer/subtitle_videos.py",
    "mpvqc/services/key_command.py",
    "mpvqc/services/label_width_calculator.py",
    "mpvqc/services/main_window.py",
    "mpvqc/services/mimetype_provider.py",
    "mpvqc/services/platform/__init__.py",
    "mpvqc/services/platform/backend.py",
    "mpvqc/services/platform/content_margins.py",
    "mpvqc/services/platform/embedded_player.py",
    "mpvqc/services/platform/fullscreen.py",
    "mpvqc/services/platform/linux/__init__.py",
    "mpvqc/services/platform/linux/backend.py",
    "mpvqc/services/platform/linux/portals.py",
    "mpvqc/services/platform/linux/resize_filter.py",
    "mpvqc/services/platform/linux/surface.py",
    "mpvqc/services/platform/linux/tiling.py",
    "mpvqc/services/platform/linux/window_button_detector.py",
    "mpvqc/services/platform/linux/window_geometry.py",
    "mpvqc/services/platform/service.py",
    "mpvqc/services/platform/win/__init__.py",
    "mpvqc/services/platform/win/backend.py",
    "mpvqc/services/platform/win/event.py",
    "mpvqc/services/platform/win/frame_integration.py",
    "mpvqc/services/platform/win/fullscreen.py",
    "mpvqc/services/platform/win/native.py",
    "mpvqc/services/platform/win/reveal_filter.py",
    "mpvqc/services/platform/win/utils.py",
    "mpvqc/services/platform/window_buttons.py",
    "mpvqc/services/platform/window_configuration.py",
    "mpvqc/services/platform/window_reveal.py",
    "mpvqc/services/player/__init__.py",
    "mpvqc/services/player/coordinators.py",
    "mpvqc/services/player/service.py",
    "mpvqc/services/player/state.py",
    "mpvqc/services/quit.py",
    "mpvqc/services/resetter.py",
    "mpvqc/services/resource.py",
    "mpvqc/services/reverse_translator.py",
    "mpvqc/services/settings.py",
    "mpvqc/services/state.py",
    "mpvqc/services/theme.py",
    "mpvqc/services/type_mapper.py",
    "mpvqc/services/version_checker.py",
    "mpvqc/services/video_resize.py",
    "mpvqc/startup.py",
    "mpvqc/viewmodels/__init__.py",
    "mpvqc/viewmodels/app/__init__.py",
    "mpvqc/viewmodels/app/app.py",
    "mpvqc/viewmodels/app/drop_area.py",
    "mpvqc/viewmodels/app/resize.py",
    "mpvqc/viewmodels/file_dialogs/__init__.py",
    "mpvqc/viewmodels/file_dialogs/export_file_dialog.py",
    "mpvqc/viewmodels/file_dialogs/import_file_dialogs.py",
    "mpvqc/viewmodels/message_boxes/__init__.py",
    "mpvqc/viewmodels/message_boxes/message_box_loader.py",
    "mpvqc/viewmodels/message_boxes/quit.py",
    "mpvqc/viewmodels/message_boxes/reset.py",
    "mpvqc/viewmodels/message_boxes/version_check.py",
    "mpvqc/viewmodels/utility/__init__.py",
    "mpvqc/viewmodels/utility/fonts.py",
    "mpvqc/viewmodels/utility/label_width_calculator.py",
    "mpvqc/viewmodels/utility/theme.py",
    "mpvqc/viewmodels/utility/window_properties.py",
    "mpvqc/viewmodels/utility/window_radius.py",
    "mpvqc/viewmodels/views/__init__.py",
    "mpvqc/viewmodels/views/footer.py",
    "mpvqc/viewmodels/views/header/__init__.py",
    "mpvqc/viewmodels/views/header/header.py",
    "mpvqc/viewmodels/views/header/menu_bar.py",
    "mpvqc/viewmodels/views/header/toolbar.py",
    "mpvqc/viewmodels/views/header/window_buttons.py",
    "mpvqc/viewmodels/views/player/__init__.py",
    "mpvqc/viewmodels/views/player/new_comment_menu.py",
    "mpvqc/viewmodels/views/player/player.py",
    "mpvqc/viewmodels/views/table/__init__.py",
    "mpvqc/viewmodels/views/table/backup_timer.py",
    "mpvqc/viewmodels/views/table/comment_table.py",
    "mpvqc/viewmodels/views/table/placeholder.py",
    "mpvqc/viewmodels/views/table/search_box.py",
    "mpvqc/viewmodels/views/table/table_utility.py",
    "mpvqc/viewmodels/window_visibility.py",
    "mpvqc/views/__init__.py",
    "mpvqc/views/player_framebuffer_object.py",
    "mpvqc/views/player_win_id.py",
    "project.qrc",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcApplicationContent.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcContentKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcFileDropArea.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcLayout.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcOverlayController.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/MpvqcWindowShadow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/App/TestHelpers.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_FileMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_HelpMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_ImportWizardFlow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_NewCommentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_OptionsMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_Shortcuts.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_VideoMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcApplicationContent_WindowChrome.qml",
    "qt/qml/io/github/mpvqc/mpvQC/App/tst_MpvqcContentKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcAnimatedIcon.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcDebugRectangle.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcHeader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcIconLabel.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcKeyboardFocusableButtonBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcKeycap.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcLabelWithToolTip.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcPositionedMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcSpinBoxRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcSwitchRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/MpvqcTextFieldRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcKeyboardFocusableButtonBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcPositionedMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcSpinBoxRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcSwitchRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Components/tst_MpvqcTextFieldRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcAboutDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcAboutListItem.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcAboutTab.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcCreditsContent.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcCreditsTab.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcLicensesContent.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/MpvqcLicensesTab.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/tst_MpvqcAboutDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/tst_MpvqcAboutListItem.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/tst_MpvqcAboutTab.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/tst_MpvqcCreditsTab.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/About/tst_MpvqcLicensesTab.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/CommentTypes/MpvqcCommentTypesActions.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/CommentTypes/MpvqcCommentTypesDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/CommentTypes/MpvqcCommentTypesDraftField.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/CommentTypes/MpvqcCommentTypesListView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/CommentTypes/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/CommentTypes/tst_MpvqcCommentTypesDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcImportWizardDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcImportWizardFooter.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardErrorsStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardSessionStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardStepGlyph.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardStepHeader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardStepIndicator.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardSteps.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardSubtitlesStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardVideoStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/MpvqcWizardVideoStepDelegate.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcImportWizardDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardErrorsStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardSessionStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardStepGlyph.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardStepIndicator.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardSubtitlesStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardVideoStep.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/ImportWizard/tst_MpvqcWizardVideoStepDelegate.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcAppearanceDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcBackupDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcDialogLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcEditInputDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcEditMpvDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcExportSettingsDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/MpvqcImportSettingsDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/Shortcuts/MpvqcShortcutDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/Shortcuts/MpvqcShortcutRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/Shortcuts/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/Shortcuts/tst_MpvqcShortcutDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Dialogs/Shortcuts/tst_MpvqcShortcutRow.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcExportClassicDocumentFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcExportCustomDocumentFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcFileDialogLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcImportDocumentsFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcImportSubtitlesFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcImportVideoFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/MpvqcSaveDocumentFileDialog.qml",
    "qt/qml/io/github/mpvqc/mpvQC/FileDialogs/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcCustomExportMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcExportErrorMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcMessageBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcQuitMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcResetMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/MpvqcVersionCheckMessageBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/MessageBoxes/tst_MpvqcMessageBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcConstants.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcFonts.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcIcons.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcLabelWidthCalculator.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcTheme.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/MpvqcWindowUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Utility/tst_MpvqcWindowUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/MpvqcFooterContextMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/MpvqcFooterContextMenuClickGuard.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/MpvqcFooterView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Footer/tst_MpvqcFooterView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcExportQcDocumentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcHeaderView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcHeaderWindowButtons.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcLanguageSubMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcMenuBar.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcMenuBarItem.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcMenuBarMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcRadioMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcToolBarButton.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/MpvqcToolBarView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Header/tst_MpvqcHeaderWindowButtons.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcNewCommentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcNewCommentMenuClickGuard.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerInputArea.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerLinux.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerStub.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/MpvqcPlayerWindows.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/tst_MpvqcNewCommentMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Player/tst_MpvqcPlayerInputArea.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentList.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentListDelegate.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentListKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcCommentListOverlays.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcContextMenuLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditCommentPopup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditCommentTypeMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcEditTimePopup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcMessageBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcPlaceholderView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcSearchBoxDragHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcSearchBoxLoader.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcSearchBoxPopup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcTableUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcTableView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/MpvqcWindowsMenuClickGuard.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/qmldir",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/TestHelpers.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcCommentListKeyHandler.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableUtility.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_Backup.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_CommentTypes.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_ContextMenu.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingComment.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingCommentScroll.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingCommentType.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_EditingTime.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_SearchBox.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_SearchBoxPosition.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_Selection.qml",
    "qt/qml/io/github/mpvqc/mpvQC/Views/Table/tst_MpvqcTableView_Undo.qml",
    "qt/qml/MpvqcApplicationLinux.qml",
    "qt/qml/MpvqcApplicationWindows.qml",
    "qt/qml/MpvqcStyle/Button.qml",
    "qt/qml/MpvqcStyle/DialogButtonBox.qml",
    "qt/qml/MpvqcStyle/MenuSeparator.qml",
    "qt/qml/MpvqcStyle/qmldir",
    "qt/qml/MpvqcStyle/ToolButton.qml",
    "qt/qml/MpvqcStyle/ToolSeparator.qml",
    "qt/qml/MpvqcStyle/ToolTip.qml",
    "testqml/__init__.py",
    "testqml/bridge.py",
    "testqml/fixtures/portable-root/appdata/backups/.keep",
    "testqml/fixtures/portable-root/appdata/export-templates/error.jinja",
    "testqml/fixtures/portable-root/appdata/export-templates/working.jinja",
    "testqml/fixtures/portable-root/appdata/input.conf",
    "testqml/fixtures/portable-root/appdata/mpv.conf",
    "testqml/fixtures/portable-root/portable",
    "testqml/fixtures/qc_document_basic.json",
    "testqml/fixtures/qc_document_basic.txt",
    "testqml/fixtures/qc_document_invalid.txt",
    "testqml/fixtures/subtitle_basic.ass",
    "testqml/fixtures/subtitle_complex.ass",
    "testqml/fixtures/video_basic.mp4",
    "testqml/import_wizard_fixtures.py",
    "testqml/injections.py",
    "testqml/main.py",
]
